@@ -1,8 +1,9 @@
 gnome-screensaver (2.18.2-1) UNRELEASED; urgency=low
 
   * New upstream stable release.
+  * Wrap build-deps and deps.
 
- -- Loic Minier <lool@dooz.org>  Tue, 29 May 2007 11:44:48 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 29 May 2007 11:52:31 +0200
 
 gnome-screensaver (2.18.1-1) unstable; urgency=low
 
